# django-tof

./: .coveragerc  .editorconfig  .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_en.md  README_ru.md  pyproject.toml  setup.cfg  setup.py  wiki_django_tof.md
.github/workflows/: check_style.yml  check_style_and_test.yml  publish.yml  style.yml  tests.yml
docs/diagrams/: struct.uml
example_project/: Pipfile  pyproject.toml
example_project/example/: asgi.py  settings.py  urls.py  wsgi.py
example_project/main/: admin.py  models.py  views.py
example_project/main/migrations/: 0001_initial.py  0002_auto_20191119_1134.py  0003_vintage_description.py  0004_winery.py
example_project/main/templates/main/: index.html
tof/: TODO.txt  __init__.py  admin.py  apps.py  decorators.py  fields.py  forms.py  managers.py  models.py  query_utils.py  settings.py  tests.py  utils.py  views.py
tof/management/commands/: benchmark.py
tof/migrations/: 0001_initial.py  0002_auto_20191029_1401.py  0002_auto_20191113_1502.py  0002_auto_20191116_1914.py  0002_auto_20191118_1000.py  0003_auto_20191030_1304.py  0003_auto_20191114_1156.py  0003_auto_20191127_0907.py  0004_auto_20191107_1418.py
tof/static/tof/css/: style.css
tof/static/tof/js/: translatable_fields_form.js  translatable_fields_widget.js  translation_form.js  translation_inline.js
tof/templates/tof/: multiwidget.html
tof/tests/: tests.py
