[tool.poetry]
name = 'django-tof'
version = "0.3.0"
description = '''Freely distributed library that allows you to translate fields of django models without having to restart the server,
  without changing the model code, with the storage of translations in the database.'''
authors = ['MaxST <mstolpasov@gmail.com>']
license = 'MIT'
repository = 'https://github.com/mom1/django-tof'
homepage = 'https://github.com/mom1/django-tof/wiki/django-tof'
keywords = ['translations', 'translate', 'django', 'model']
readme = 'README.md'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Database',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Text Processing :: Linguistic'
]
include = ['AUTHORS']
exclude = ['setup.cfg']
packages = [
    { include = 'tof' },
]

[tool.poetry.dependencies]
python = '^3.6'
django = '>=2.2'

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
