[tool.poetry]
name = "example_project"
version = "0.1.0"
description = ""
authors = ["MaxST <mstolpasov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "==3.0rc1"
django-tof = {path = "..", develop = true}

[tool.poetry.dev-dependencies]
ipdb = "*"
django-debug-toolbar = "*"
mixer = "^6.1.3"
coverage = "^4.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
