[tool.poetry]
name = "example_project"
version = "0.3.0"
description = ""
authors = ["MaxST <mstolpasov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
django-tof = {path = "..", develop = true}

[tool.poetry.dev-dependencies]
ipdb = "*"
django-debug-toolbar = "*"
mixer = "^6.1.3"
coverage = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
